# bot-rdnc

./: .gitignore  .pre-commit-config.yaml  README.md  Template Automation.txt  main.py  playwright_docker_guide.md  pyproject.toml
app/UI/: __init__.py  chat_page.py  components.py  state.py
app/bot/: handler.py
app/config/: settings.py
app/core/: __init__.py  cache.py  logging.py  monitoring.py
app/data/: __init__.py  loader.py  processor.py
app/models/: __init__.py  sicetac.py
app/nlp/: __init__.py  extractor.py  normalizer.py  parser.py
app/scrapper/: __init__.py  browser.py  decorator.py  rndc.py  selectors.py  sicetac.py  utils.py
app/services/: __init__.py  query_service.py
data/: .~lock.RNDC.xlsx#  municipios.xls  sicetac_combinaciones.json  sicetac_options.json  sicetac_to_rndc.json
docker/playwright/: .env.example  docker-compose.yml
docker/playwright/scripts/: interactive.sh  run-tests.sh
scripts/: build_lookup.py
tests/: test_cache.py  test_normalizer.py
